src/objects/GPM_Project_Risk__c.object
<CustomObject>
    <description>This object is used to support the Project object; it allows users to associate risks in the Risk Catalog to Projects.</description>
    <fields>
        <fullName>Date_Identified__c</fullName>
        <label>Date Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <inlineHelpText>Enter the Date the Risk/Issue was Resolved.</inlineHelpText>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve_Risk__c</fullName>
        <formula>IF 
(NOT(ISNULL( Date_Resolved__c)),
Date_Resolved__c - Date_Identified__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days to Resolve Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exposure_Flag__c</fullName>
        <formula>IMAGE( 
CASE(Exposure__c , 
&quot;Red (High)&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow (Medium)&quot;, &quot;/resource/YellowFlag&quot;, 
&quot;Green (Low)&quot;, &quot;/resource/GreenFlag&quot;,&quot;/s.gif&quot;), 
CASE(Exposure__c, 
&quot;Red (High)&quot;, &quot;Red (High)&quot;, 
&quot;Yellow (Medium)&quot;, &quot;Yellow (Medium)&quot;, 
&quot;Green (Low)&quot;, &quot;Green (Low)&quot;,&quot;Exposure&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exposure Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposure__c</fullName>
        <label>Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red (High)</fullName>
                </value>
                <value>
                    <fullName>Yellow (Medium)</fullName>
                </value>
                <value>
                    <fullName>Green (Low)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPM_Project__c</fullName>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipName>GPM_Project_Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>1- Negligible: Can Mitigate
2- Minor: Probably Mitigate
3- Moderate: May Mitigate
4- Serious:Cannot Mitigate with current approach
5- Critical: Cannot Mitigate No workaround</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1- Negligible</fullName>
                </value>
                <value>
                    <fullName>2- Minor</fullName>
                </value>
                <value>
                    <fullName>3- Moderate</fullName>
                </value>
                <value>
                    <fullName>4- Serious</fullName>
                </value>
                <value>
                    <fullName>5- Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation_Approach__c</fullName>
        <label>Mitigation Approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Unlikely</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Even Likelihood</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Title__c</fullName>
        <formula>HYPERLINK(Id, Title__c,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_or_Issue__c</fullName>
        <description>Select if the record is a Risk or an Issue</description>
        <inlineHelpText>Risk is uncertain event/condition that, if it occurs, has an effect on a project&apos;s objectives; 
Issue is a risk that has occurred and cannot be managed by Project Manager</inlineHelpText>
        <label>Risk or Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mitigation Pending - Open</fullName>
                </value>
                <value>
                    <fullName>Mitigation Planned - In Progress</fullName>
                </value>
                <value>
                    <fullName>Mitigation In Place - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Risk / Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRI-{000000000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks / Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Resolved_later_than_Date_Identified</fullName>
        <active>true</active>
        <description>Date Resolved must be a greater date than Date Identified</description>
        <errorConditionFormula>Date_Resolved__c &lt;  Date_Identified__c</errorConditionFormula>
        <errorMessage>Date Resolved must later or equal to Date Identified.</errorMessage>
    </validationRules>
</CustomObject>